--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "ng-shared": "file:../ng-shared/dist/ng-shared",
     "rxjs": "~6.5.5",
+    "shared": "file:../shared",
     "single-spa": ">=4.0.0",
     "single-spa-angular": "^4.4.2",
     "tslib": "^2.0.0",
